# raytracing-seminar-practice

./: CMakeLists.txt  run.sh
glm/: common.hpp  exponential.hpp  geometric.hpp  matrix.hpp  packing.hpp  vector_relational.hpp
glm/detail/: func_common.inl  qualifier.hpp  setup.hpp  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp  quaternion_common.hpp  quaternion_double.hpp  quaternion_double_precision.hpp  quaternion_float.hpp  quaternion_float_precision.hpp  quaternion_trigonometric.hpp  scalar_int_sized.hpp  scalar_uint_sized.hpp  vector_int2_sized.hpp  vector_int3_sized.hpp  vector_int4_sized.hpp  vector_uint2_sized.hpp  vector_uint3_sized.hpp  vector_uint4_sized.hpp
glm/gtc/: quaternion.hpp
include/: BVH.hpp  Camera.hpp  Color.hpp  Gltf.hpp  Image.hpp  Light.hpp  Material.hpp  Primitive.hpp  Random.hpp  Ray.hpp  Scene.hpp  Transform.hpp  Transformable.hpp  geometry_utils.hpp  parse_input.hpp  render.hpp  utils.hpp
include/rapidjson/internal/: strtod.h
src/: BVH.cpp  Camera.cpp  Color.cpp  Image.cpp  Primitive.cpp  Random.cpp  Ray.cpp  Scene.cpp  Transform.cpp  Transformable.cpp  geometry_utils.cpp  main.cpp  parse_input.cpp  render.cpp
